--- a/.gitignore
+++ b/.gitignore
@@ -34,15 +34,12 @@ captures/
 
 # Intellij
 *.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/dictionaries
-.idea/libraries
-
+.idea
+gradlew
 # Keystore files
 *.jks
-
+gradlew.bat
+gradle
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
 
